--- a/_posts/2019-08-20-my-blog.markdown
+++ b/_posts/2019-08-20-my-blog.markdown
@@ -7,10 +7,10 @@ tags:
  - Jekyll
 ---
 
-博客基于[Jekyll](https://jekyllrb.com/)博客框架来搭建，并采用[Hux Blog](https://github.com/Huxpro/huxpro.github.io)作为博客主题。分两步走：
+博客基于 <a href="https://jekyllrb.com" target="_blank">Jekyll</a> 博客框架来搭建，并采用 <a href="https://github.com/loji44/ExSimple" target="_blank">ExSimple</a> 作为博客主题。分两步走：
 
 - 安装Jekyll博客的开发环境
-- 配置Hux Blog作为博客主题
+- 配置ExSimple作为博客主题
 
 ### 1. 安装Jekyll博客开发环境
 Jekyll依赖Ruby语言环境，所以要先安装Ruby。我自己电脑（Mac OS）本身自带了Ruby，版本为：
@@ -20,9 +20,7 @@ $ ruby -v
 ruby 2.3.7p456 (2018-03-28 revision 63024) [universal.x86_64-darwin18]
 ```
 
->根据[Jekyll官网](https://jekyllrb.com/)中介绍的“三大步”安装教程，可以很快搭建一个静态博客网站。
-
-首先，我们执行下面的指令来安装 Jekyll：
+首先，执行下面的指令来安装 Jekyll：
 
 ```bash
 $ gem install bundler jekyll
@@ -37,17 +35,15 @@ ERROR:  Error installing jekyll:
 	jekyll-sass-converter requires Ruby version >= 2.4.0.
 ```
 
-嗯... 很明显，我电脑自带的Ruby版本没满足Jekyll要求的版本（`Ruby version >= 2.4.0`）。还能怎么办？那就来升级一下Ruby的版本呗：
+嗯... 很明显，我电脑自带的Ruby版本没满足Jekyll要求的版本。还能怎么办？那就来升级一下Ruby的版本呗 `:)`
 
->参考了这篇文章：「[Mac OS升级Ruby](https://www.jianshu.com/p/a575aff064e3)」把Ruby升级到了2.6.3版本。这篇文章中介绍的升级方法，核心就是使用Ruby的第三方版本管理工具[RVM](http://rvm.io/)来完成。
-
-那么就先来安装RVM（官网也有介绍[如何安装RVM](http://rvm.io/)）：
+这里通过Ruby的版本管理器<a href="http://rvm.io" target="_blank">RVM</a>(`Ruby Version Manager`)来升级Ruby的版本。先来安装RVM：
 
 ```bash
 $ curl -L get.rvm.io | bash -s stable
 ```
 
-安装完成之后，执行下面的指令来使RVM立即生效：
+RVM安装完成之后，执行下面的指令来使RVM立即生效：
 
 ```bash
 $ source ~/.rvm/scripts/rvm
@@ -76,7 +72,7 @@ $ ruby -v
 ruby 2.6.3p62 (2019-04-16 revision 67580) [x86_64-darwin18]
 ```
 
-没错了，接下来继续安装我们的Jekyll，直接执行下面的指令进行安装：
+没错了，接下来继续安装我们的Jekyll。直接执行下面的指令进行安装：
                            
 ```bash
 $ gem install bundler jekyll
@@ -84,40 +80,34 @@ $ gem install bundler jekyll
 
 这个安装过程可能会有点耗时，请耐心等待安装Jekyll完成 ...
 
-### 2. 使用Hux Blog作为博客主题
+### 2. 配置ExSimple作为博客主题
 
-经过上一章，我们已经将Jekyll开发环境搭建好了，现在来配置Hux Blog作为博客主题。
+至此，Jekyll开发环境搭建好了。现在来配置ExSimple作为博客主题。
 
-- 下载Hux Blog主题源码，删除无关的文件
+- 下载ExSimple主题源码
 
 ```bash
-$ git clone git@github.com:Huxpro/huxblog-boilerplate.git my_blog_site
-$ cd my_blog_site
-$ rm -rf my_blog_site/_posts/*
+$ git clone https://github.com/loji44/ExSimple.git your_blog
+$ cd your_blog
 ```
 
->因为我们下载的是主题作者的博客源码，所以使用 `rm -rf my_blog_site/_posts/*`直接删除作者的发布的文章，然后我们就可以在 `_posts`目录下面创建自己的博客文章，写博客了。
-
-- 写一个简单的博客文章：`vim 2019-08-20-my-blog.markdown` 内容如下：
+下载之后，直接在`_posts`目录下面创建自己的博客文章：`vim 2019-08-20-my-blog.markdown` 编辑内容如下
 
 ```bash
 ---
 layout: post
 title: 关于我的博客网站
-subtitle: 我的博客网站搭建记录
 date: 2019-08-20 15:28:34.000000000 +08:00
-header-img: assets/images/tag-bg.jpg
-author: PandaQ
 tags: 
- - Blog
- - 技术教程
+ - 博客
+ - Jekyll
 ---
 
->这篇文章记录一下自己博客搭建的过程。
+这是我的个人博客。
 
 ```
 
-- 启动Jekyll
+- 本地调试：启动Jekyll
 
 ```bash
 $ bundle install && bundle exec jekyll serve
@@ -129,13 +119,13 @@ Jekyll默认监听的host是`127.0.0.0`，只能从本机电脑访问；启动Je
 
 ```bash
 $ bundle exec jekyll serve --host 0.0.0.0
-Configuration file: /root/my_blog_site/_config.yml
-            Source: /root/my_blog_site
-       Destination: /root/my_blog_site/_site
+Configuration file: /root/your_blog/_config.yml
+            Source: /root/your_blog
+       Destination: /root/your_blog/_site
  Incremental build: disabled. Enable with --incremental
       Generating...
                     done in 0.408 seconds.
- Auto-regeneration: enabled for '/root/my_blog_site'
+ Auto-regeneration: enabled for '/root/your_blog'
     Server address: http://0.0.0.0:4000
   Server running... press ctrl-c to stop.
 ```
@@ -144,13 +134,13 @@ Configuration file: /root/my_blog_site/_config.yml
 
 ```bash
 $ bundle exec jekyll serve --host 0.0.0.0 --port 8080
-Configuration file: /root/my_blog_site/_config.yml
-            Source: /root/my_blog_site
-       Destination: /root/my_blog_site/_site
+Configuration file: /root/your_blog/_config.yml
+            Source: /root/your_blog
+       Destination: /root/your_blog/_site
  Incremental build: disabled. Enable with --incremental
       Generating...
                     done in 0.419 seconds.
- Auto-regeneration: enabled for '/root/my_blog_site'
+ Auto-regeneration: enabled for '/root/your_blog'
     Server address: http://0.0.0.0:8080
   Server running... press ctrl-c to stop.
 ```
@@ -159,7 +149,7 @@ Configuration file: /root/my_blog_site/_config.yml
 
 ### 3. 将Jekyll博客以静态资源方式部署
 
-如果博客文章写好了，想将博客文章打包成静态资源结合Web服务器进行发布，例如使用`Nginx`或者`Github Pages`进行部署。
+博客文章写完，想将博客打包成静态资源部署到Web服务器上，例如使用`Nginx`或者`Github Pages`进行部署。
 
 - 进入博客代码根目录执行下面的指令，将博客打包成静态资源：
 
@@ -169,6 +159,6 @@ $ bundle install && jekyll build
 
 运行完毕后，会在根目录下生成`_site`文件夹，这个文件夹就是我们的博客文章静态资源。直接将这个文件夹下的全部内容拷贝到`Nginx`的静态资源部署目录下，即可完成部署。
 
-或者你使用的是`Github Pages`，请参考官网的教程：[Github Pages](https://pages.github.com)。
+或者你使用的是`Github Pages`，请移步Github官网教程：<a href="https://pages.github.com" target="_blank">Github Pages</a>。
 
 <hr />
