--- a/_posts/java/2019-10-12-java-spi.md
+++ b/_posts/java/2019-10-12-java-spi.md
@@ -28,9 +28,9 @@ Service定义SPI接口并以`jar`包的方式对外发布。若第三方（Servi
 这个打印服务应用定义的一个标准SPI接口：`com.pandaq.spi.PrinterService`，这个接口会以jar包的方式对外发布。
 
 ```java
-package com.pandaq.spi;
+package com.loji44.spi;
 
-public interface PrinterService {
+public interface Printer {
     String print(String text);
 }
 ```
@@ -39,9 +39,9 @@ public interface PrinterService {
 
 ```java
 package com.canon.printer;
-import com.pandaq.spi.PrinterService;
+import com.pandaq.spi.Printer;
 
-public class CanonPrinter implements PrinterService {
+public class CanonPrinter implements Printer {
     @Override
     public String print(String text) {
         System.out.println("佳能打印机为您服务：" + text);
@@ -68,12 +68,12 @@ public class CanonPrinter implements PrinterService {
 
 ```java
 import java.util.ServiceLoader;
-import com.pandaq.spi.PrinterService;
+import com.pandaq.spi.Printer;
 
 // 我是打印机服务应用，这里是启动打印服务的入口
 public class PrinterLauncher {
     public static void main(String[] args) {
-        ServiceLoader<PrinterService> serviceLoader = ServiceLoader.load(PrinterService.class);
+        ServiceLoader<Printer> serviceLoader = ServiceLoader.load(Printer.class);
         serviceLoader.forEach(printer -> {
             printer.print("我要打印很多钱");
         });
@@ -93,7 +93,7 @@ public class PrinterLauncher {
 在上一节中，我们通过以下几行代码就可以发现、加载并使用服务提供商提供的SPI实现：
 
 ```java
-ServiceLoader<PrinterService> serviceLoader = ServiceLoader.load(PrinterService.class);
+ServiceLoader<Printer> serviceLoader = ServiceLoader.load(Printer.class);
 serviceLoader.forEach(printer -> {
     printer.print("我要打印很多钱");
 });
@@ -101,7 +101,7 @@ serviceLoader.forEach(printer -> {
 
 没错，Java SPI服务提供商提供的实现是通过`java.util.ServiceLoader`这个类来完成查找、加载并使用的。我们来看看它是如何查找并加载SPI实现类的：
 
-- ServiceLoader.load(PrinterService.class)
+- ServiceLoader.load(Printer.class)
 
 ```java
 public static <S> ServiceLoader<S> load(Class<S> service) {
@@ -183,7 +183,7 @@ public void reload() {
 答案是在使用的时候才进行实现类的加载：
 
 ```java
-ServiceLoader<PrinterService> serviceLoader = ServiceLoader.load(PrinterService.class);
+ServiceLoader<Printer> serviceLoader = ServiceLoader.load(Printer.class);
 serviceLoader.forEach(printer -> {
     printer.print("我要打印很多钱");
 });
