--- a/_posts/auth/2019-12-30-oauth.md
+++ b/_posts/auth/2019-12-30-oauth.md
@@ -6,7 +6,7 @@ tags:
   - Auth
 ---
 
-有位大佬已经讲的很清楚了，有理论有实操(包教包会)，强力推荐。不多废话，直接上链接：
+<a href="http://www.ruanyifeng.com/home.html" target="_blank">阮一峰</a> 大佬的系列文章已经讲的很清楚了，有理论有实操(包教包会)，强力推荐。不多废话，直接上链接：
 
 - <a href="http://www.ruanyifeng.com/blog/2014/05/oauth_2_0.html" target="_blank">理解OAuth 2.0</a>
 - <a href="http://www.ruanyifeng.com/blog/2019/04/oauth_design.html" target="_blank">OAuth 2.0 的一个简单解释</a>
