--- a/_posts/java/2019-10-12-java-spi.md
+++ b/_posts/java/2019-10-12-java-spi.md
@@ -25,7 +25,7 @@ Service定义SPI接口并以`jar`包的方式对外发布。若第三方（Servi
 
 假设有一个Service：打印机服务应用，对用户提供打印服务。这个打印机服务应用很强大，可以做到适配任何厂家的打印设备，因为这个打印服务应用在设计的时候考虑到了可扩展性。
 
-这个打印服务应用定义的一个标准SPI接口：`com.pandaq.spi.PrinterService`，这个接口会以jar包的方式对外发布。
+这个打印服务应用定义的一个标准SPI接口：`com.loji44.spi.Printer`，这个接口会以jar包的方式对外发布。
 
 ```java
 package com.loji44.spi;
@@ -39,7 +39,7 @@ public interface Printer {
 
 ```java
 package com.canon.printer;
-import com.pandaq.spi.Printer;
+import com.loji44.spi.Printer;
 
 public class CanonPrinter implements Printer {
     @Override
@@ -68,7 +68,7 @@ public class CanonPrinter implements Printer {
 
 ```java
 import java.util.ServiceLoader;
-import com.pandaq.spi.Printer;
+import com.loji44.spi.Printer;
 
 // 我是打印机服务应用，这里是启动打印服务的入口
 public class PrinterLauncher {
@@ -145,7 +145,7 @@ public static <S> ServiceLoader<S> load(Class<S> service, ClassLoader loader) {
 
 ```java
 public final class ServiceLoader<S> implements Iterable<S> {
-    // 将要被加载的SPI接口类的Class对象，例如 PrinterService.class
+    // 将要被加载的SPI接口类的Class对象，例如 Printer.class
     private final Class<S> service;
     // 用于加载SPI服务提供商提供的实现类的类加载器
     private final ClassLoader loader;
@@ -233,7 +233,7 @@ private class LazyIterator implements Iterator<S> {
         if (configs == null) {
             try {
                 // 这里的PREFIX就是 "META-INF/services/"
-                // fullName在这里就是 "META-INF/services/com.pandaq.spi.PrinterService"
+                // fullName在这里就是 "META-INF/services/com.loji44.spi.Printer"
                 String fullName = PREFIX + service.getName();
                 if (loader == null)
                     configs = ClassLoader.getSystemResources(fullName);
@@ -249,7 +249,7 @@ private class LazyIterator implements Iterator<S> {
             if (!configs.hasMoreElements()) {
                 return false;
             }
-            // 逐行解析 com.pandaq.spi.PrinterService 文件内容
+            // 逐行解析 com.loji44.spi.Printer 文件内容
             pending = parse(service, configs.nextElement());
         }
         // 文件中每一行内容就是一个实现类的全限定名
